--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,12 @@
     </string>
     <string name="logout">Logout</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="new_user">New user</string>
+    <string name="title_activity_user">UserActivity</string>
+    <string name="save">Save</string>
+    <string name="circle_name">Circle name</string>
+    <string name="user_name">User name</string>
+    <string name="create_circle">Create circle</string>
+    <string name="description">Description</string>
+    <string name="email">E-mail</string>
 </resources>
